--- a/AutoClick/Pages/PoliticaPrivacidad.cshtml
+++ b/AutoClick/Pages/PoliticaPrivacidad.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = "Política de Privacidad - AutoClick.cr";
 }
 
+<link rel="stylesheet" href="~/css/legal.css" />
+
 <div class="legal-page">
     <div class="legal-container">
         <h1>Política de Privacidad</h1>
