--- a/AutoClick/Pages/PpfCeramico.cshtml
+++ b/AutoClick/Pages/PpfCeramico.cshtml
@@ -11,7 +11,9 @@
 <!-- Hero Section with Rain-X Products -->
 <section class="rainx-hero-section">
     <div class="rainx-hero-background">
-        <img src="~/images/rainx/8b1ce10d81dd5b4fb704f27a6e127a7079ca5cc7.png" alt="Rain-X Products" class="rainx-hero-image" />
+        <img src="~/images/rainx/8b1ce10d81dd5b4fb704f27a6e127a7079ca5cc7.png" alt="Rain-X Products" class="rainx-hero-image rainx-hero-desktop" />
+        <img src="~/images/rainx/Rainx1_responsive.png" alt="Rain-X Products" class="rainx-hero-image rainx-hero-tablet" />
+        <img src="~/images/rainx/Rainx1_movil.png" alt="Rain-X Products" class="rainx-hero-image rainx-hero-mobile" />
     </div>
 </section>
 
