--- a/AutoClick/Pages/TerminosCondiciones.cshtml
+++ b/AutoClick/Pages/TerminosCondiciones.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = "Términos y Condiciones - AutoClick.cr";
 }
 
+<link rel="stylesheet" href="~/css/legal.css" />
+
 <div class="legal-page">
     <div class="legal-container">
         <h1>Términos y Condiciones de Uso</h1>
