--- a/AutoClick/Pages/Index.cshtml
+++ b/AutoClick/Pages/Index.cshtml
@@ -112,25 +112,25 @@
         .index-section-responsive {
             display: block !important;
             position: relative !important;
-            padding: 0 20px;
-            margin-top: 32px;
+            padding: 0;
+            margin-top: 0;
         }
         
         /* Noticias section sin padding lateral */
         .index-section-responsive:has(.index-noticias-container) {
-            padding: 0 20px !important;
+            padding: 0 !important;
         }
         
         .index-section-responsive .index-noticias-container {
             width: 100% !important;
-            padding: 0 !important;
+            padding: 0 16px 0 16px !important;
         }
         
         .index-section-divider {
             display: block !important;
             height: 1px;
             background: rgba(255, 255, 255, 0.15);
-            margin: 24px 20px;
+            margin: 16px 0;
         }
         
         /* Quitar subrayado de links en cards */
@@ -353,25 +353,25 @@
         .index-section-responsive {
             display: block !important;
             position: relative !important;
-            padding: 0 40px;
-            margin-top: 40px;
+            padding: 0 16px;
+            margin-top: 20px;
         }
         
         /* Noticias section sin padding lateral */
         .index-section-responsive:has(.index-noticias-container) {
-            padding: 0 40px !important;
+            padding: 0 !important;
         }
         
         .index-section-responsive .index-noticias-container {
             width: 100% !important;
-            padding: 0 !important;
+            padding: 0 16px 0 16px !important;
         }
         
         .index-section-divider {
             display: block !important;
             height: 1px;
             background: rgba(255, 255, 255, 0.15);
-            margin: 32px 40px;
+            margin: 20px 0;
         }
         
         /* Quitar subrayado de links en cards */
@@ -427,7 +427,7 @@
             bottom: 0 !important;
             left: 0 !important;
             width: 100% !important;
-            padding: 16px 20px !important;
+            padding: 16px 0 !important;
             background: linear-gradient(to top, rgba(0,0,0,0.8) 25%, rgba(0,0,0,0)) !important;
         }
         
@@ -515,9 +515,7 @@
         scrollbar-width: none;
         -ms-overflow-style: none;
         padding: 0 0 16px 0;
-        margin: 0 -20px;
-        padding-left: 20px;
-        padding-right: 20px;
+        margin: 0;
     }
     
     .index-cards-scroll-container::-webkit-scrollbar {
@@ -993,7 +991,7 @@
     <div class="index-section-divider" style="display: none;"></div>
 
     <!-- Noticias - Responsive -->
-    <div class="index-section-responsive" style="display: none;">
+    <div class="index-section-responsive" style="display: none; margin-bottom: 32px;">
         <div class="index-section-header">
             <div class="index-section-title">Noticias</div>
         </div>
@@ -1034,8 +1032,6 @@
             </a>
         </div>
     </div>
-
-    <div class="index-section-divider" style="display: none;"></div>
 
     <!-- END RESPONSIVE SECTIONS -->
 
@@ -1473,9 +1469,6 @@
             </div>
         </div>
     </a>
-
-    <!-- Línea divisora después de Noticias -->
-    <div style="width: calc(100% - 64px); height: 1px; background: rgba(255, 255, 255, 0.15); left: 32px; top: 3826px; position: absolute;"></div>
 </div>
 
 <script>
