--- a/AutoClick/Pages/Shared/_HeaderResponsive.cshtml
+++ b/AutoClick/Pages/Shared/_HeaderResponsive.cshtml
@@ -13,14 +13,11 @@
                 var isIndexPage = currentPage == "/Index" || currentPage == "" || currentPage == "/" || ViewContext.HttpContext.Request.Path == "/" || ViewContext.HttpContext.Request.Path == "/Index";
             }
             
-            <!-- Search Button (Solo en Index) -->
-            @if (isIndexPage)
-            {
-                <a asp-page="/BusquedaAvanzada" class="search-btn-index" title="Búsqueda">
-                    <img src="~/images/icons/search-icon.svg" alt="Búsqueda" />
-                    <span>Búsqueda</span>
-                </a>
-            }
+            <!-- Search Button (Todas las vistas) -->
+            <a asp-page="/BusquedaAvanzada" class="search-btn-index" title="Búsqueda">
+                <img src="~/images/icons/search-icon.svg" alt="Búsqueda" />
+                <span>Búsqueda</span>
+            </a>
             
             <!-- Menu/Close Button -->
             <button class="menu-btn" id="menuBtn" aria-label="Menú">
@@ -44,13 +41,13 @@
             {
                 <!-- Auth Section (No logueado - aparece primero) -->
                 <div class="menu-auth-section">
-                    <a href="/Auth" class="menu-item menu-item-login">Iniciar sesión</a>
-                    <a href="/Auth" class="menu-item menu-item-register" onclick="event.preventDefault(); window.location.href='/Auth';">Registrarse</a>
+                    <a href="/Auth?mode=login#login" class="menu-item menu-item-login">Iniciar sesión</a>
+                    <a href="/Auth#login" class="menu-item menu-item-register" onclick="event.preventDefault(); window.location.href='/Auth';">Registrarse</a>
                 </div>
             }
             
             <!-- Main Navigation -->
-            <a asp-page="/BusquedaAvanzada" class="menu-item menu-item-primary">Explorar todos los autos</a>
+            <a asp-page="/BusquedaAvanzada" class="menu-item menu-item-primary menu-item-with-icon">Explorar todos los autos</a>
             <div class="menu-divider"></div>
             
             <!-- Anúnciese Section -->
@@ -66,10 +63,6 @@
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M0.193426 59.4165V94.875C0.193426 97.152 2.05163 99 4.34121 99H13.2672C14.2495 99.0002 15.2 98.6537 15.9494 98.0222C16.6989 97.3907 17.1986 96.5152 17.3597 95.5515L19.5498 82.5H91.4447L93.6292 95.5515C93.7903 96.5152 94.2901 97.3907 95.0395 98.0222C95.7889 98.6537 96.7394 99.0002 97.7217 99H106.653C107.753 99 108.808 98.5654 109.586 97.7918C110.364 97.0182 110.801 95.969 110.801 94.875V59.4165C110.801 52.9508 108.877 46.6297 105.271 41.25L100.957 34.815C100.572 34.2421 100.243 33.6344 99.9726 33H105.47C106.24 33 106.996 32.7864 107.651 32.3832C108.307 31.9801 108.836 31.4033 109.181 30.7175L110.563 27.9675C110.879 27.339 111.028 26.6408 110.996 25.9391C110.964 25.2374 110.752 24.5554 110.381 23.9577C110.01 23.36 109.492 22.8665 108.875 22.5239C108.259 22.1813 107.564 22.001 106.858 22H97.5281L95.8137 13.497C95.2921 10.9074 94.0316 8.52189 92.1829 6.62581C90.3342 4.72973 87.9756 3.40327 85.3889 2.805C77.3035 0.935001 67.3378 0 55.4972 0C43.6512 0 33.6909 0.935001 25.6055 2.805C23.0179 3.40233 20.658 4.72839 18.8083 6.62454C16.9585 8.52069 15.6972 10.9066 15.1752 13.497L13.4608 22H4.14212C3.4358 22.001 2.74142 22.1813 2.1248 22.5239C1.50818 22.8665 0.989753 23.36 0.618645 23.9577C0.247536 24.5554 0.0360443 25.2374 0.00421439 25.9391C-0.0276155 26.6408 0.12127 27.339 0.436762 27.9675L1.81936 30.7175C2.16318 31.4024 2.69188 31.9787 3.34627 32.3818C4.00067 32.7849 4.75495 32.999 5.52471 33H11.0274C10.7572 33.6343 10.4276 34.242 10.043 34.815L5.72381 41.25C2.118 46.629 0.193426 52.9485 0.193426 59.4165ZM88.4638 33.022C88.8448 34.9243 89.4771 36.7681 90.3442 38.5055H20.6503C21.5186 36.773 22.149 34.9305 22.5306 33.022L26.0258 15.6585C26.129 15.1394 26.3806 14.6609 26.7504 14.2804C27.1202 13.8999 27.5926 13.6336 28.1108 13.5135C35.2892 11.8635 44.4365 11 55.4972 11C66.558 11 75.7052 11.858 82.8837 13.519C83.4022 13.6378 83.8752 13.9028 84.246 14.2823C84.6168 14.6618 84.8696 15.1397 84.9742 15.6585L88.4638 33.022ZM19.5498 66C21.7499 66 23.8599 65.1308 25.4156 63.5836C26.9713 62.0365 27.8453 59.938 27.8453 57.75C27.8453 55.562 26.9713 53.4635 25.4156 51.9164C23.8599 50.3692 21.7499 49.5 19.5498 49.5C17.3496 49.5 15.2396 50.3692 13.6839 51.9164C12.1282 53.4635 11.2542 55.562 11.2542 57.75C11.2542 59.938 12.1282 62.0365 13.6839 63.5836C15.2396 65.1308 17.3496 66 19.5498 66ZM99.7403 57.75C99.7403 59.938 98.8663 62.0365 97.3106 63.5836C95.7548 65.1308 93.6448 66 91.4447 66C89.2446 66 87.1346 65.1308 85.5789 63.5836C84.0231 62.0365 83.1491 59.938 83.1491 57.75C83.1491 55.562 84.0231 53.4635 85.5789 51.9164C87.1346 50.3692 89.2446 49.5 91.4447 49.5C93.6448 49.5 95.7548 50.3692 97.3106 51.9164C98.8663 53.4635 99.7403 55.562 99.7403 57.75Z" fill="white"/>
                     </svg>
                     Anunciar mi auto
-                </a>
-                <a asp-page="/AnunciarEmpresa" class="menu-item menu-item-secondary">
-                    <img src="https://autoclickstorage.blob.core.windows.net/uploads/AnunciarAgencia.png" alt="Agencia" style="width: 22px; height: 22px; flex-shrink: 0;" />
-                    Anunciarme como agencia
                 </a>
                 <a asp-page="/AnunciarEmpresa" class="menu-item menu-item-secondary">
                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg" style="flex-shrink: 0;">
